# quickmsg

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.org  quickmsg.pc.in
cmake/: FindDotNetFrameworkSdk.cmake  FindTBB.cmake  Findczmq.cmake  Findlibzmq.cmake  Findzyre.cmake  UseCSharp.cmake  UseDotNetFrameworkSdk.cmake
docs/: tutorial.org
include/quickmsg/: add_n_ints.hpp  client.hpp  client_wrap.h  ctypes.h  group_node.hpp  publisher.hpp  publisher_wrap.h  quickmsg.hpp  quickmsg_java.hpp  quickmsg_wrap.h  service.hpp  service_wrap.h  subscriber.hpp  subscriber_wrap.h  types.hpp
msvc/: build_zyre.bat  compile_boost.bat  getDependencies.ps1  get_zyre.sh  install_jars.bat  wm_install.bat
msvc/quickmsg/: README.org  libsodium.import.props  libzmq.import.props  packages.config  quickmsg.sln  quickmsg.vcxproj  quickmsg.vcxproj.filters
msvc/quickmsg/quickmsg-c/: packages.config  quickmsg-c.vcxproj  quickmsg-c.vcxproj.filters
msvc/quickmsg/test_c_sub/: test_c_sub.vcxproj  test_c_sub.vcxproj.filters
msvc/test_c_pub/: resource.h  test_c_pub.aps  test_c_pub.vcxproj  test_c_pub.vcxproj.filters
src/: client.cpp  client_wrap.cpp  clk_client_test.cpp  clk_service_test.cpp  clock_sync.cpp  clock_sync.hpp  cqm_util.hpp  group_node.cpp  publisher.cpp  publisher_wrap.cpp  quickmsg.cpp  quickmsg_java.cpp  quickmsg_wrap.cpp  service.cpp  service_wrap.cpp  subscriber.cpp  subscriber_wrap.cpp  test_client.cpp  test_pub.cpp  test_service.cpp  test_sub.cpp  time_win.h  types.cpp  udp_server.hpp
src/lisp/: quickmsg.asd  quickmsg.lisp
swig/: IMessageCallback.java  IServiceCallback.java  nosourceyet.cs  quickmsg.i  quickmsg_csharp.i  quickmsg_java.i  quickmsg_py.i  swig_includes.i
swig/quickmsg/: IMessageCallback.java  IServiceCallback.java  JNIUtil.java
test/c/: test_client.c  test_pub.c  test_service.c  test_sub.c
test/c-sharp/: test_client_cs.cs  test_pub_cs.cs  test_service_cs.cs  test_sub_cs.cs
test/cpp/: add_n_ints.hpp  cli_load2.cpp  client_load.cpp  svc_load.cpp  svc_pub_alloc.cpp  test_client.cpp  test_node.cpp  test_pub.cpp  test_service.cpp  test_sub.cpp
test/java/: test_client.java  test_node.java  test_pub.java  test_service.java  test_sub.java
test/lisp/: test_client.cl  test_client.lisp  test_pub.cl  test_pub.lisp  test_service.cl  test_service.lisp  test_ssub.lisp  test_sub.cl  test_sub.lisp
test/python/: test_client.py  test_pub.py  test_service.py  test_sub.py
